crates/parser/src/snapshots/parser__tests__parse_inline_err@0001_simple_lambda_expr_error.ath.snap
---
source: crates/parser/src/tests.rs
description: "lambda (x y z) domain D\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0001_simple_lambda_expr_error.ath
---
ERROR
  LAMBDA_EXPR
    LAMBDA_KW "lambda"
    WHITESPACE " "
    L_PAREN "("
    IDENTIFIER
      IDENT "x"
    WHITESPACE " "
    IDENTIFIER
      IDENT "y"
    WHITESPACE " "
    IDENTIFIER
      IDENT "z"
    R_PAREN ")"
  WHITESPACE " "
  DOMAIN_KW "domain"
  WHITESPACE " "
  IDENT "D"
  WHITESPACE "\n"
error 14: Expected to find an expression for the lambda body

