crates/parser/src/snapshots/parser__tests__parse_inline_err@0003_term_var_no_sort.ath.snap
---
source: crates/parser/src/tests.rs
description: "?foo :\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0003_term_var_no_sort.ath
---
TERM_VAR_EXPR
  QUESTION "?"
  IDENTIFIER
    IDENT "foo"
  WHITESPACE " "
  COLON ":"
  WHITESPACE "\n"
error 6: Expected to find a sort for the term variable

