crates/parser/src/snapshots/parser__tests__parse_inline_err@0008_cell_expr_no_phrase.ath.snap
---
source: crates/parser/src/tests.rs
description: "cell\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0008_cell_expr_no_phrase.ath
---
CELL_EXPR
  CELL_KW "cell"
  WHITESPACE "\n"
error 4: Expected to find a phrase for the cell expression

