crates/parser/src/snapshots/parser__tests__parse_inline_err@0011_ref_expr_no_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "ref\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0011_ref_expr_no_expr.ath
---
REF_EXPR
  REF_KW "ref"
  WHITESPACE "\n"
error 3: Expected to find a target expression for the ref expression

